LU-3286 llog: local storage doesn't need vfsmount

After introduction of local storage device vfsmount is redundant,
and servers don't need this struct to access local storage based
llog.
* remove lsi_srv_mnt from lustre_sb_info.
* remove lmi_mnt from lustre_mount_info.
* remove ddp_mnt from dt_device_param.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: I8cfdda8c871301ec9a332a01fd0a2523fe1a09c2
Reviewed-on: http://review.whamcloud.com/8286
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>